<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/settings_root_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

        <TextView
			android:id="@+id/settings_storage_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
            android:text="@string/settings_storage"
            android:textColor="@color/settings_header"
            android:textSize="16sp"
			android:padding="10dp"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/settings_divider" />

        <RelativeLayout
            android:id="@+id/settings_use_humanity_filename_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp" >

            <CheckBox
                android:id="@+id/settings_use_humanity_filename_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/settings_use_humanity_filename_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_use_humanity_filename"
                android:textColor="@color/settings_header"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/settings_use_humanity_filename_checkbox" 
                android:textSize="16sp" />

            <TextView
                android:id="@+id/settings_use_humanity_filename_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_use_humanity_filename_desc"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/settings_use_humanity_filename_checkbox"
                android:layout_below="@id/settings_use_humanity_filename_text"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>